Fixed expandCollapsedStandard for sections with types

--- a/app/client/stylesheets/__modals.scss
+++ b/app/client/stylesheets/__modals.scss
@@ -42,6 +42,7 @@
         select {
           &.disabled {
             pointer-events: none;
+            background-color: #eceeef;
           }
         }
       }   
